add structure main

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,14 +42,78 @@
           <img src="./assets/images/header.jpg" alt="Foto creando espacios" />
           <div>
             <hi class="title">Disfruta creando espacios</hi>
-            <button class="hero__btn-b-dark">
+            <button class="btn__b">
               <a class="link" href="https://adalab.es"> comprar ahora</a>
             </button>
           </div>
         </section>
-        <section class="section1">Volverse</section>
-        <section class="section2"></section>
-        <section class="section3"></section>
+        <section class="section1">
+          <h2 class="title2">
+            Volverse organizado se siente mejor con
+            <span class="capital">open spaces</span>
+          </h2>
+          <div class="items">
+            <div class="item">
+              <img
+                src="./assets/images/icon_1.png"
+                alt="Icono Lo que necesitas"
+              />
+              <h3 class="title3">Lo que necesitas</h3>
+              <p class="text1">
+                Una linea de productos diseñados para todos tus espacios
+              </p>
+            </div>
+            <div class="item">
+              <img
+                src="./assets/images/icon_2.png"
+                alt="Icono Materia primas sustentables"
+              />
+              <h3 class="title3">Materia primas sustentables</h3>
+              <p class="text1">
+                Todos los productos con materias primas sustentables
+              </p>
+            </div>
+            <div class="item">
+              <img src="./assets/images/icon_3.png" alt="Icono Guía" />
+              <h3 class="title3">Guía</h3>
+              <p class="text1">
+                Soporte y asesoramiento para ayudarte con tu objetivo
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="section2">
+          <div class="shipping">
+            <img
+              src="./assets/images/icon_4.png"
+              alt="Icono Envío gratis garantizado"
+            />
+            <h3 class="title2">Envío gratis garantizado</h3>
+            <p class="text2">
+              Soporte y asesoramiento para ayudarte con tu objetivo
+            </p>
+            <button class="btn__b--light--un">
+              <a class="link" href="https://adalab.es"> comprar ahora</a>
+            </button>
+          </div>
+        </section>
+        <section class="section3">
+          <div class="claim">
+            <h3 class="title2">Disfruta creando espacios</h3>
+            <p class="text2">
+              Una línea de productos diseñados para todos los espacios
+            </p>
+            <button class="btn__b">
+              <a class="link" href="https://adalab.es"> comprar ahora</a>
+            </button>
+          </div>
+          <div class="container-img">
+            <img
+              src="./assets/images/creando-espacios.jpg"
+              alt="Icono Envío gratis garantizado"
+            />
+          </div>
+        </section>
       </main>
 
       <footer class="footer"></footer>
