--- a/src/html/index.html
+++ b/src/html/index.html
@@ -116,7 +116,57 @@
         </section>
       </main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__item">
+          <h3 class="title3">Tienda</h3>
+          <nav class="nav_items">
+            <ul class="text2-light link">
+              <li><a href="https://adalab.es">Productos</a></li>
+              <li><a href="https://adalab.es">Cajoneras</a></li>
+              <li><a href="https://adalab.es">Para toda la casa</a></li>
+              <li><a href="https://adalab.es">Habitaciones</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__item">
+          <h3 class="title3">Nosotros</h3>
+          <nav class="nav_items">
+            <ul class="text2-light link">
+              <li><a href="https://adalab.es">Nuestra Guía</a></li>
+              <li><a href="https://adalab.es">Nuestro diseño</a></li>
+              <li><a href="https://adalab.es">Nuestra historia</a></li>
+              <li><a href="https://adalab.es">Ayuda</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__item">
+          <h3 class="title3">Contacto</h3>
+          <div class="text2-light link">
+            <p>ayuda@openspaces.com</p>
+            <a href="https://adalab.es">Socios</a>
+          </div>
+
+          <ul class="link">
+            <li>
+              <a href="https://www.linkedin.com/school/adalab/"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/adalab_digital/"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/Adalab_Digital"
+                ><i class="fa-brands fa-twitter"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
     <script src="./assets/js/main.js"></script>
   </body>
