add partials html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,155 +19,10 @@
   </head>
 
   <body>
-    <div class="wrapper">
-      <header class="header">
-        <a class="link-bars" href="https://adalab.es">
-          <i class="fa-solid fa-bars"></i>
-        </a>
+    <include src="./partials/header.html"></include>
 
-        <nav class="menu">
-          <ul>
-            <li>productos</li>
-            <li>colecciones</li>
-            <li>tienda</li>
-            <li>inicio</li>
-          </ul>
-        </nav>
+    <include src="./partials/main.html"></include>
 
-        <img src="./assets/images/logo.png" alt="Logo Open Spaces" />
-      </header>
-
-      <main class="main">
-        <section class="m-hero">
-          <img src="./assets/images/header.jpg" alt="Foto creando espacios" />
-          <div>
-            <hi class="title">Disfruta creando espacios</hi>
-            <button class="btn__b">
-              <a class="link" href="https://adalab.es"> comprar ahora</a>
-            </button>
-          </div>
-        </section>
-        <section class="section1">
-          <h2 class="title2">
-            Volverse organizado se siente mejor con
-            <span class="capital">open spaces</span>
-          </h2>
-          <div class="items">
-            <div class="item">
-              <img
-                src="./assets/images/icon_1.png"
-                alt="Icono Lo que necesitas"
-              />
-              <h3 class="title3">Lo que necesitas</h3>
-              <p class="text1">
-                Una linea de productos diseñados para todos tus espacios
-              </p>
-            </div>
-            <div class="item">
-              <img
-                src="./assets/images/icon_2.png"
-                alt="Icono Materia primas sustentables"
-              />
-              <h3 class="title3">Materia primas sustentables</h3>
-              <p class="text1">
-                Todos los productos con materias primas sustentables
-              </p>
-            </div>
-            <div class="item">
-              <img src="./assets/images/icon_3.png" alt="Icono Guía" />
-              <h3 class="title3">Guía</h3>
-              <p class="text1">
-                Soporte y asesoramiento para ayudarte con tu objetivo
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="section2">
-          <div class="shipping">
-            <img
-              src="./assets/images/icon_4.png"
-              alt="Icono Envío gratis garantizado"
-            />
-            <h3 class="title2">Envío gratis garantizado</h3>
-            <p class="text2">
-              Soporte y asesoramiento para ayudarte con tu objetivo
-            </p>
-            <button class="btn__b--light--un">
-              <a class="link" href="https://adalab.es"> comprar ahora</a>
-            </button>
-          </div>
-        </section>
-        <section class="section3">
-          <div class="claim">
-            <h3 class="title2">Disfruta creando espacios</h3>
-            <p class="text2">
-              Una línea de productos diseñados para todos los espacios
-            </p>
-            <button class="btn__b">
-              <a class="link" href="https://adalab.es"> comprar ahora</a>
-            </button>
-          </div>
-          <div class="container-img">
-            <img
-              src="./assets/images/creando-espacios.jpg"
-              alt="Icono Envío gratis garantizado"
-            />
-          </div>
-        </section>
-      </main>
-
-      <footer class="footer">
-        <div class="footer__item">
-          <h3 class="title3">Tienda</h3>
-          <nav class="nav_items">
-            <ul class="text2-light link">
-              <li><a href="https://adalab.es">Productos</a></li>
-              <li><a href="https://adalab.es">Cajoneras</a></li>
-              <li><a href="https://adalab.es">Para toda la casa</a></li>
-              <li><a href="https://adalab.es">Habitaciones</a></li>
-            </ul>
-          </nav>
-        </div>
-
-        <div class="footer__item">
-          <h3 class="title3">Nosotros</h3>
-          <nav class="nav_items">
-            <ul class="text2-light link">
-              <li><a href="https://adalab.es">Nuestra Guía</a></li>
-              <li><a href="https://adalab.es">Nuestro diseño</a></li>
-              <li><a href="https://adalab.es">Nuestra historia</a></li>
-              <li><a href="https://adalab.es">Ayuda</a></li>
-            </ul>
-          </nav>
-        </div>
-
-        <div class="footer__item">
-          <h3 class="title3">Contacto</h3>
-          <div class="text2-light link">
-            <p>ayuda@openspaces.com</p>
-            <a href="https://adalab.es">Socios</a>
-          </div>
-
-          <ul class="link">
-            <li>
-              <a href="https://www.linkedin.com/school/adalab/"
-                ><i class="fa-brands fa-linkedin-in"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/adalab_digital/"
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-            </li>
-            <li>
-              <a href="https://twitter.com/Adalab_Digital"
-                ><i class="fa-brands fa-twitter"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </footer>
-    </div>
-    <script src="./assets/js/main.js"></script>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
